# book-companion

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  setup-github-secrets.sh  tasks.md
.github/workflows/: deploy-simple.yml  deploy.yml  test.yml
book_companion/: __init__.py  cli.py  ingestion.py  models.py
book_companion/auth/: __init__.py  config.py  middleware.py  models.py  server.py  store.py
book_companion/chat/: __init__.py  engine.py  prompts.py  session.py
book_companion/google_drive/: __init__.py  auth.py  client.py
book_companion/llm/: __init__.py  base.py  claude_client.py  factory.py  gemini_client.py
book_companion/mcp/: __init__.py  server.py
book_companion/mcp/static/: openapi.yaml
book_companion/parsers/: __init__.py  base.py  epub_parser.py  markdown_parser.py  pdf_parser.py
book_companion/processing/: __init__.py  chunker.py  embeddings.py  summarizer.py
book_companion/security/: __init__.py  sanitize.py
book_companion/storage/: __init__.py  database.py  pg_session_store.py  pg_vector_store.py  session_store.py  vector_store.py
book_companion/utils/: __init__.py  costs.py
docs/: openapi.yaml
scripts/: migrate_to_postgres.py
tests/: __init__.py  conftest.py  test_models.py
tests/test_auth/: __init__.py  test_oauth_endpoints.py
tests/test_processing/: test_chunker.py
tests/test_security/: test_sanitize.py
